tests/NormalTests/paczka1/fuzzy1/35767770.err
Error in line 4: S135 A74 54,9
Error in line 23: wEhnaa S315 81,3
Error in line 17: 8d7ODyhillT S315 69,0
